--- a/src/ServiceStack.OrmLite.Oracle.Tests/ServiceStack.OrmLite.Oracle.Tests.csproj
+++ b/src/ServiceStack.OrmLite.Oracle.Tests/ServiceStack.OrmLite.Oracle.Tests.csproj
@@ -267,6 +267,9 @@
     <Compile Include="..\..\tests\ServiceStack.OrmLite.Tests\Shared\ModelWithOnlyStringFields.cs">
       <Link>Shared\ModelWithOnlyStringFields.cs</Link>
     </Compile>
+    <Compile Include="..\..\tests\ServiceStack.OrmLite.Tests\Shared\ModelWithRowVersionField.cs">
+      <Link>Shared\ModelWithRowVersionField.cs</Link>
+    </Compile>
     <Compile Include="..\..\tests\ServiceStack.OrmLite.Tests\Shared\Movie.cs">
       <Link>Shared\Movie.cs</Link>
     </Compile>
